--- a/css/styles.css
+++ b/css/styles.css
@@ -170,8 +170,17 @@ body {
 .foot-address {
   color: var(--white-color);
 
+  font-style: normal;
   font-size: 14px;
   line-height: 1.74;
+}
+
+.foot-logo {
+  color: var(--white-color);
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 
 .contact-link {
@@ -180,4 +189,41 @@ body {
   font-size: 14px;
   line-height: 1.74;
   text-decoration: none;
+}
+
+.select-list {
+  text-decoration: none;
+  list-style: none;
+}
+
+.select-button {
+  background-color: #f5f4fa;
+  color: var(--title-text-color);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+}
+
+.select-button:hover,
+.select-button:focus {
+  background-color: var(--accent-color);
+  color: var(--white-color);
+  cursor: pointer;
+}
+
+/* portfolio */
+
+.portfolio-title {
+  color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+}
+
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.88;
 }
