attempt at adding current

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,10 @@ body {
   list-style: none;
 }
 
+.site-nav-link .current {
+  color: var(--accent-color);
+}
+
 /* logo */
 
 .title {
@@ -45,7 +49,7 @@ body {
 
 /* nav */
 
-.site-nav .link {
+.site-nav-link {
   text-decoration: none;
   color: var(--title-text-color);
   font-weight: 500;
@@ -53,14 +57,10 @@ body {
   line-height: 1.14;
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav-link:hover,
+.site-nav-link:focus {
   color: var(--accent-color);
   text-decoration: none;
-}
-
-.site-nav .link-current {
-  color: var(--accent-color);
 }
 
 .contact-link {
